feat: exercise 1.1 (but only with quadratic kernels)

--- a/assignments/assignment_2/assignment_2.ipynb
+++ b/assignments/assignment_2/assignment_2.ipynb
@@ -58,8 +58,8 @@
    "metadata": {
     "id": "PbV3peY1pwiL",
     "ExecuteTime": {
-     "end_time": "2024-05-02T15:12:02.698511Z",
-     "start_time": "2024-05-02T15:11:58.626827Z"
+     "end_time": "2024-05-28T11:09:24.157706Z",
+     "start_time": "2024-05-28T11:09:19.730443Z"
     }
    },
    "outputs": [],
@@ -96,17 +96,208 @@
    }
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-28T12:44:17.575681Z",
+     "start_time": "2024-05-28T12:44:17.542883Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def cross_correlation(input : np.ndarray, kernel : np.ndarray) -> np.ndarray:\n",
-    "  # Your code goes here\n",
-    "  raise NotImplementedError"
+    "  a = (kernel.shape[0]-1)/2\n",
+    "  b = (kernel.shape[1]-1)/2\n",
+    "  # Der output soll genau inputsize-kernelsize + 1 groß sein\n",
+    "  output = np.zeros((input.shape[0]-kernel.shape[0]+1, input.shape[1]-kernel.shape[1]+1))\n",
+    "  # Iteriere über jede column\n",
+    "  for idxLine, line in enumerate(input):\n",
+    "    #Spring raus, wenn man in der ersten oder letzten column ist (da kein padding angegeben wurde)\n",
+    "    if idxLine == 0 or idxLine == input.shape[0]-1: continue\n",
+    "    # Iteriere über jeden Wert der column\n",
+    "    for idxPixel, pixel in enumerate(line):\n",
+    "          #Spring raus, wenn man in dem ersten oder letzten Wert einer column ist (da kein padding angegeben wurde)\n",
+    "      if idxPixel == 0 or idxPixel == input.shape[1]-1: continue\n",
+    "      # Berechne für den jeweiligen Wert den Output Wert, indem die Umgebung mit dem Kernel multipliziert wird und die Werte aufsummiert werden\n",
+    "      for idxI, i in enumerate(np.arange(-a,a+1, dtype=int)):\n",
+    "        for idxJ, j in enumerate(np.arange(-b,b+1, dtype=int)):\n",
+    "          output[idxLine-1, idxPixel-1] += input[idxLine, idxPixel]*kernel[idxI, idxJ]\n",
+    "  return output\n",
+    "\n",
+    "\n",
+    "image = np.arange(100).reshape((20,5))\n",
+    "kernel = np.array([[1, 0, 1], [0, 1, 0], [1, 0, 1]])\n",
+    "\n",
+    "output = cross_correlation(image, kernel)\n",
+    "print(output)"
    ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 30.  35.  40.]\n",
+      " [ 55.  60.  65.]\n",
+      " [ 80.  85.  90.]\n",
+      " [105. 110. 115.]\n",
+      " [130. 135. 140.]\n",
+      " [155. 160. 165.]\n",
+      " [180. 185. 190.]\n",
+      " [205. 210. 215.]\n",
+      " [230. 235. 240.]\n",
+      " [255. 260. 265.]\n",
+      " [280. 285. 290.]\n",
+      " [305. 310. 315.]\n",
+      " [330. 335. 340.]\n",
+      " [355. 360. 365.]\n",
+      " [380. 385. 390.]\n",
+      " [405. 410. 415.]\n",
+      " [430. 435. 440.]\n",
+      " [455. 460. 465.]]\n"
+     ]
+    }
+   ],
+   "execution_count": 116
+  },
+  {
    "metadata": {
-    "id": "WHeUzO8Xpikm"
+    "ExecuteTime": {
+     "end_time": "2024-05-28T12:24:21.237703Z",
+     "start_time": "2024-05-28T12:24:21.166773Z"
+    }
    },
-   "execution_count": null,
-   "outputs": []
+   "cell_type": "code",
+   "source": [
+    "image = np.arange(100).reshape((5,20))\n",
+    "kernel = np.array([[1,0,1],[0,1,0],[1,0,1]])\n",
+    "\n",
+    "output = cross_correlation(image, kernel)\n",
+    "print(output)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [20 21 22 23]\n",
+      " [40 41 42 43]\n",
+      " [60 61 62 63]]\n",
+      "(5, 20)\n",
+      "[-1  0  1]\n",
+      "[-1  0  1]\n",
+      "3\n",
+      "18\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "pixel = 20\n",
+      "shape1 - 2 18\n",
+      "pixel = 21\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 1\n",
+      "computedValueForOutput: 105\n",
+      "pixel = 22\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 2\n",
+      "computedValueForOutput: 110\n",
+      "pixel = 23\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 3\n",
+      "computedValueForOutput: 115\n",
+      "pixel = 24\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 4\n",
+      "computedValueForOutput: 120\n",
+      "pixel = 25\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 5\n",
+      "computedValueForOutput: 125\n",
+      "pixel = 26\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 6\n",
+      "computedValueForOutput: 130\n",
+      "pixel = 27\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 7\n",
+      "computedValueForOutput: 135\n",
+      "pixel = 28\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 8\n",
+      "computedValueForOutput: 140\n",
+      "pixel = 29\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 9\n",
+      "computedValueForOutput: 145\n",
+      "pixel = 30\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 10\n",
+      "computedValueForOutput: 150\n",
+      "pixel = 31\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 11\n",
+      "computedValueForOutput: 155\n",
+      "pixel = 32\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 12\n",
+      "computedValueForOutput: 160\n",
+      "pixel = 33\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 13\n",
+      "computedValueForOutput: 165\n",
+      "pixel = 34\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 14\n",
+      "computedValueForOutput: 170\n",
+      "pixel = 35\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 15\n",
+      "computedValueForOutput: 175\n",
+      "pixel = 36\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 16\n",
+      "computedValueForOutput: 180\n",
+      "pixel = 37\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 17\n",
+      "computedValueForOutput: 185\n",
+      "pixel = 38\n",
+      "shape1 - 2 18\n",
+      "idx: 1\n",
+      "idxPixel: 18\n",
+      "computedValueForOutput: 190\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 18 is out of bounds for axis 1 with size 18",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[99], line 4\u001B[0m\n\u001B[0;32m      1\u001B[0m image \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marange(\u001B[38;5;241m100\u001B[39m)\u001B[38;5;241m.\u001B[39mreshape((\u001B[38;5;241m5\u001B[39m,\u001B[38;5;241m20\u001B[39m))\n\u001B[0;32m      2\u001B[0m kernel \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marray([[\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m1\u001B[39m],[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m0\u001B[39m],[\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m1\u001B[39m]])\n\u001B[1;32m----> 4\u001B[0m output \u001B[38;5;241m=\u001B[39m \u001B[43mcross_correlation\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimage\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkernel\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28mprint\u001B[39m(output)\n",
+      "Cell \u001B[1;32mIn[98], line 28\u001B[0m, in \u001B[0;36mcross_correlation\u001B[1;34m(input, kernel)\u001B[0m\n\u001B[0;32m     26\u001B[0m         computedValueForOutput \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;28minput\u001B[39m[idx, idxPixel]\u001B[38;5;241m*\u001B[39mkernel[idxI, idxJ]\n\u001B[0;32m     27\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcomputedValueForOutput: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mcomputedValueForOutput\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m---> 28\u001B[0m     \u001B[43moutput\u001B[49m\u001B[43m[\u001B[49m\u001B[43midx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43midxPixel\u001B[49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m computedValueForOutput\n\u001B[0;32m     29\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m np\u001B[38;5;241m.\u001B[39masarray(output)\n",
+      "\u001B[1;31mIndexError\u001B[0m: index 18 is out of bounds for axis 1 with size 18"
+     ]
+    }
+   ],
+   "execution_count": 99
   },
   {
    "cell_type": "markdown",
@@ -191,14 +382,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T15:12:12.331587Z",
-     "start_time": "2024-05-02T15:12:11.193846Z"
+     "end_time": "2024-05-15T21:31:13.953466Z",
+     "start_time": "2024-05-15T21:31:11.292259Z"
     }
    },
    "cell_type": "code",
    "source": "flowers = cv2.cvtColor(url2img(\"https://github.com/bozeklab/ComputerVision_SS24/blob/main/resources/assignment_2/crush.png?raw=true\"),cv2.COLOR_BGR2GRAY)",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -236,14 +427,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T15:12:23.848931Z",
-     "start_time": "2024-05-02T15:12:23.657964Z"
+     "end_time": "2024-05-15T21:31:17.234290Z",
+     "start_time": "2024-05-15T21:31:15.128107Z"
     }
    },
    "cell_type": "code",
    "source": "flowers_rgb = cv2.cvtColor(url2img(\"https://github.com/bozeklab/ComputerVision_SS24/blob/main/resources/assignment_2/crush.png?raw=true\"),cv2.COLOR_BGR2RGB)",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "cell_type": "code",
